force-app/main/default/objects/Contact/fields/Account_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Id__c</fullName>
    <description>Capture the account owner&apos;s Id. Used in Restrict_user_from_Changing_Account validation rule.</description>
    <formula>Account.OwnerId</formula>
    <label>Account Owner Id</label>
    <type>Text</type>
</CustomField>