force-app/main/default/objects/Contact/fields/Account_User__c.field-meta.xml
<CustomField>
    <fullName>Account_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To store the incoming information from Acquire</description>
    <label>Account User</label>
    <type>Checkbox</type>
</CustomField>