force-app/main/default/objects/Contact/fields/Airline_News_and_Promotions__c.field-meta.xml
<CustomField>
    <fullName>Airline_News_and_Promotions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Airline News and Promotions</label>
    <type>Checkbox</type>
</CustomField>