force-app/main/default/objects/Contact/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <description>Stored email for the user when CAP data is not accurate</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>