force-app/main/default/objects/Contact/fields/Aquire_Account_Holder_Flag__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Account_Holder_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Incoming data from Aquire</description>
    <label>Aquire Account Holder Flag (Do Not Use)</label>
    <type>Checkbox</type>
</CustomField>