force-app/main/default/objects/Contact/fields/Aquire_Account_Nominee_customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Account_Nominee_customer_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aquire Account Nominee Cust (Do Not Use)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>