force-app/main/default/objects/Contact/fields/Aquire_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Account_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aquire Account Owner</label>
    <type>Checkbox</type>
</CustomField>