force-app/main/default/objects/Contact/fields/Aquire_Account_User__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Account_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for Refine Contact Roles in Salesforce</description>
    <label>Aquire Account User</label>
    <type>Checkbox</type>
</CustomField>