force-app/main/default/objects/Contact/fields/Aquire_Airline_News_and_Promotions__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Airline_News_and_Promotions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Incoming data from Aquire</description>
    <label>Account Airline News (Do Not Use)</label>
    <type>Checkbox</type>
</CustomField>