force-app/main/default/objects/Contact/fields/Aquire_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Contact_Role__c</fullName>
    <label>Aquire Contact Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Account User</fullName>
            </value>
            <value>
                <fullName>Travel Co-ordinator</fullName>
            </value>
            <value>
                <fullName>Travel Decision Maker</fullName>
            </value>
            <value>
                <fullName>Traveller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>