force-app/main/default/objects/Contact/fields/Aquire_Key_Travel_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Key_Travel_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for Refine Contact Roles in Salesforce</description>
    <label>Aquire Key Travel Coord (Do Not Use)</label>
    <type>Checkbox</type>
</CustomField>