force-app/main/default/objects/Contact/fields/Aquire_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Membership_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aquire Membership Number (Do Not Use)</label>
    <length>128</length>
    <type>Text</type>
</CustomField>