force-app/main/default/objects/Contact/fields/Aquire_Operations_Comms__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Operations_Comms__c</fullName>
    <label>Agency Aquire Operations Comms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscribed</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>