force-app/main/default/objects/Contact/fields/Aquire_Status__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Status__c</fullName>
    <description>To store the incoming information from Acquire</description>
    <label>Aquire Status (Do Not Use)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>In Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>