force-app/main/default/objects/Contact/fields/Aquire_Travel_Arranger__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Travel_Arranger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for Refine Contact Roles in Salesforce</description>
    <label>Aquire Travel Arranger</label>
    <type>Checkbox</type>
</CustomField>