force-app/main/default/objects/Contact/fields/Aquire_Updates_Program_News__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Updates_Program_News__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To store the incoming information from Acquire</description>
    <label>Aquire Updates &amp; Program (Do Not Use)</label>
    <type>Checkbox</type>
</CustomField>