force-app/main/default/objects/Contact/fields/Business_Types__c.field-meta.xml
<CustomField>
    <fullName>Business_Types__c</fullName>
    <inlineHelpText>Freight: Users always need to select &quot;Freight&quot;
Loyalty: Users always need to select &quot;Loyalty&quot;</inlineHelpText>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>B&amp;G</fullName>
            </value>
            <value>
                <fullName>Supplier/Commercial Partner</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>