force-app/main/default/objects/Contact/fields/CAP_ID__c.field-meta.xml
<CustomField>
    <fullName>CAP_ID__c</fullName>
    <description>Contact CAP ID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CAP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>