force-app/main/default/objects/Contact/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <description>This id is used by QCC customer search to pass the id of a case to the server when the contact is first created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CaseId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>