force-app/main/default/objects/Contact/fields/Chairman_lounge_status__c.field-meta.xml
<CustomField>
    <fullName>Chairman_lounge_status__c</fullName>
    <formula>IF(Chairman_s_Lounge_Member__c,&apos;Y&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chairman lounge status</label>
    <type>Text</type>
</CustomField>