force-app/main/default/objects/Contact/fields/Chairman_s_Lounge_Member__c.field-meta.xml
<CustomField>
    <fullName>Chairman_s_Lounge_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chairmans Lounge Member (Not on layout)</label>
    <type>Checkbox</type>
</CustomField>