force-app/main/default/objects/Contact/fields/Comm_Restriction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Comm_Restriction_Reason__c</fullName>
    <description>Field for Data Migration</description>
    <label>Restriction Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unsubscribe to SME Newsletter</fullName>
            </value>
            <value>
                <fullName>Unsub-Comms - Daily Alert</fullName>
            </value>
            <value>
                <fullName>Unsub-Comms – News Updates</fullName>
            </value>
            <value>
                <fullName>Unsub-Comms - Newsletters</fullName>
            </value>
            <value>
                <fullName>No Promotions</fullName>
            </value>
            <value>
                <fullName>Privacy Preference</fullName>
            </value>
            <value>
                <fullName>Contact Attempts failed</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>NOT IN USE2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>