force-app/main/default/objects/Contact/fields/Contact_Roles__c.field-meta.xml
<CustomField>
    <fullName>Contact_Roles__c</fullName>
    <description>Field for Data Migration</description>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Organization Contacts</fullName>
            </value>
            <value>
                <fullName>Employees</fullName>
            </value>
            <value>
                <fullName>Member Of - Qantas Corp Scheme</fullName>
            </value>
            <value>
                <fullName>Travel Manager BDM/CRM</fullName>
            </value>
            <value>
                <fullName>Agreement Approver</fullName>
            </value>
            <value>
                <fullName>Board Members</fullName>
            </value>
            <value>
                <fullName>Agreement Signer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>