force-app/main/default/objects/Contact/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <description>Getting Full name of Country to Populate from Contact Country to Case Country field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CountryName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>