force-app/main/default/objects/Contact/fields/Created_By_Reporting_Team__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Reporting_Team__c</fullName>
    <description>This is used for Reporting to return the Created By User Team</description>
    <formula>CreatedBy.Reporting_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By (Reporting Team)</label>
    <type>Text</type>
</CustomField>