force-app/main/default/objects/Contact/fields/Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Role__c</fullName>
    <description>This is used for Reporting.</description>
    <formula>CreatedBy.UserRole.Name</formula>
    <label>Created By: Role</label>
    <type>Text</type>
</CustomField>