force-app/main/default/objects/Contact/fields/Customer_Headlines__c.field-meta.xml
<CustomField>
    <fullName>Customer_Headlines__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Headlines</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>