force-app/main/default/objects/Contact/fields/Domestic_Seat_Code_Desc__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Seat_Code_Desc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Domestic Seat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>