force-app/main/default/objects/Contact/fields/ETL_Batch_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>ETL_Batch_Execution_Id__c</fullName>
    <description>used for ETL only. do not use this field for any other purpose.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>used for ETL only. do not use this field for any other purpose.</inlineHelpText>
    <label>ETL_Batch_Execution_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>