force-app/main/default/objects/Contact/fields/Formatted_Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Business_Phone__c</fullName>
    <description>Checking up the Formatted Number for Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>