force-app/main/default/objects/Contact/fields/Formatted_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Home_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>