force-app/main/default/objects/Contact/fields/Formatted_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Mobile_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>