force-app/main/default/objects/Contact/fields/Freight_Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Freight_Contact_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Freight - To capture the city which the Contact is located in</description>
    <label>City</label>
    <referenceTo>Airport_Code__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>