force-app/main/default/objects/Contact/fields/Freight_Portal_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Freight_Portal_User_Id__c</fullName>
    <description>Freight - To store the business keys for Contacts coming from Tauras.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Freight Portal User Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>