force-app/main/default/objects/Contact/fields/Frequent_Flyer_Number__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Frequent Flyer Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>