force-app/main/default/objects/Contact/fields/Frequent_Flyer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Tier__c</fullName>
    <description>QCC: Created to show/store Contact&apos;s Frequent Flyer Tier.</description>
    <label>Frequent Flyer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-tiered</fullName>
                <color>#FFFFFF</color>
                <default>true</default>
                <label>Non-tiered</label>
            </value>
            <value>
                <fullName>Bronze</fullName>
                <color>#DDDDDD</color>
                <label>Bronze</label>
            </value>
            <value>
                <fullName>Silver</fullName>
                <color>#DDDDDD</color>
                <label>Silver</label>
            </value>
            <value>
                <fullName>Gold</fullName>
                <color>#FFCC33</color>
                <label>Gold</label>
            </value>
            <value>
                <fullName>Platinum</fullName>
                <color>#FFCC33</color>
                <label>Platinum</label>
            </value>
            <value>
                <fullName>Platinum One</fullName>
                <color>#000000</color>
                <label>Platinum One</label>
            </value>
            <value>
                <fullName>Chairman&apos;s Lounge</fullName>
                <color>#000000</color>
                <label>Chairman&apos;s Lounge</label>
            </value>
            <value>
                <fullName>Lifetime Silver</fullName>
                <color>#DDDDDD</color>
                <label>Lifetime Silver</label>
            </value>
            <value>
                <fullName>Lifetime Gold</fullName>
                <color>#FFCC33</color>
                <label>Lifetime Gold</label>
            </value>
            <value>
                <fullName>Chairman&apos;s Lounge Platinum One</fullName>
                <color>#000000</color>
                <label>Chairman&apos;s Lounge Platinum One</label>
            </value>
            <value>
                <fullName>Chairmans Lounge</fullName>
            </value>
            <value>
                <fullName>Chairmans Lounge Platinum One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>