force-app/main/default/objects/Contact/fields/GA_Contact__c.field-meta.xml
<CustomField>
    <fullName>GA_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Restrict GA&apos;s Contact Visibility for Roles other than &apos;QF-Government Affairs&apos;</description>
    <label>GA Contact</label>
    <type>Checkbox</type>
</CustomField>