force-app/main/default/objects/Contact/fields/Has_Open_CCAT_Case__c.field-meta.xml
<CustomField>
    <fullName>Has_Open_CCAT_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Open CCAT Case</label>
    <type>Checkbox</type>
</CustomField>