force-app/main/default/objects/Contact/fields/Intnl_Meal_Request_Code_Desc__c.field-meta.xml
<CustomField>
    <fullName>Intnl_Meal_Request_Code_Desc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>International Meal Request</label>
    <length>50</length>
    <type>Text</type>
</CustomField>