force-app/main/default/objects/Contact/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Types__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agency Manager</fullName>
            </value>
            <value>
                <fullName>Agency Owner</fullName>
            </value>
            <value>
                <fullName>Ambassador / High Commissioner</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Business Development Manager</fullName>
            </value>
            <value>
                <fullName>Business Development Manager - Agency</fullName>
            </value>
            <value>
                <fullName>Business Development Manager – Corporate</fullName>
            </value>
            <value>
                <fullName>Chairman</fullName>
            </value>
            <value>
                <fullName>Chancellor</fullName>
            </value>
            <value>
                <fullName>Charter Broker</fullName>
            </value>
            <value>
                <fullName>Charter Key Contact</fullName>
            </value>
            <value>
                <fullName>Chief Executive Officer</fullName>
            </value>
            <value>
                <fullName>Chief Information Officer</fullName>
            </value>
            <value>
                <fullName>Chief Marketing Officer</fullName>
            </value>
            <value>
                <fullName>Chief of Business Unit</fullName>
            </value>
            <value>
                <fullName>Chief of Finance</fullName>
            </value>
            <value>
                <fullName>Chief of Organisation</fullName>
            </value>
            <value>
                <fullName>Chief of Procurement</fullName>
            </value>
            <value>
                <fullName>Chief of the Organisation</fullName>
            </value>
            <value>
                <fullName>Commercial Director</fullName>
            </value>
            <value>
                <fullName>Commerical Partner Contact</fullName>
            </value>
            <value>
                <fullName>Consultant/agent</fullName>
            </value>
            <value>
                <fullName>Consultant/agent - Senior</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Executive Assistant</fullName>
            </value>
            <value>
                <fullName>Executive Management</fullName>
            </value>
            <value>
                <fullName>Executive Team Member (non Finance)</fullName>
            </value>
            <value>
                <fullName>GDS</fullName>
            </value>
            <value>
                <fullName>Head of Supplier Relations</fullName>
            </value>
            <value>
                <fullName>Key Traveller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>