force-app/main/default/objects/Contact/fields/Job_Role_Sort_System__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Sort_System__c</fullName>
    <formula>CASE(Job_Role__c,&quot;Chief of Organisation&quot;,1,&quot;Chief of Finance&quot;,2,&quot;Chief of Procurement&quot;,3,&quot;Procurement / supply management&quot;,4,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Role Sort[System]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>