force-app/main/default/objects/Contact/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the contact&apos;s job title within the organisation. Please use full description and avoid using abbreviations.
**S&amp;D - max 50 character limit applies.</inlineHelpText>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>