force-app/main/default/objects/Contact/fields/Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check Key Contact for request coming through QAC API&apos;s</description>
    <label>Key Contact</label>
    <type>Checkbox</type>
</CustomField>