force-app/main/default/objects/Contact/fields/Leisure_Interest__c.field-meta.xml
<CustomField>
    <fullName>Leisure_Interest__c</fullName>
    <label>Leisure Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Art Exhibitions</fullName>
            </value>
            <value>
                <fullName>Ballet</fullName>
            </value>
            <value>
                <fullName>Children Events</fullName>
            </value>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>Concerts</fullName>
            </value>
            <value>
                <fullName>Fashion Shows</fullName>
            </value>
            <value>
                <fullName>Music Festivals</fullName>
            </value>
            <value>
                <fullName>Music Performances</fullName>
            </value>
            <value>
                <fullName>Opera</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>Thought Leader Events</fullName>
            </value>
            <value>
                <fullName>Cinema</fullName>
                <isActive>false</isActive>
                <label>Cinema</label>
            </value>
            <value>
                <fullName>Classical Music</fullName>
                <isActive>false</isActive>
                <label>Classical Music</label>
            </value>
            <value>
                <fullName>Computers</fullName>
                <isActive>false</isActive>
                <label>Computers</label>
            </value>
            <value>
                <fullName>Diving</fullName>
                <isActive>false</isActive>
                <label>Diving</label>
            </value>
            <value>
                <fullName>Fashion</fullName>
                <isActive>false</isActive>
                <label>Fashion</label>
            </value>
            <value>
                <fullName>Gardening</fullName>
                <isActive>false</isActive>
                <label>Gardening</label>
            </value>
            <value>
                <fullName>Handicrafts</fullName>
                <isActive>false</isActive>
                <label>Handicrafts</label>
            </value>
            <value>
                <fullName>Hiking</fullName>
                <isActive>false</isActive>
                <label>Hiking</label>
            </value>
            <value>
                <fullName>Horse riding</fullName>
                <isActive>false</isActive>
                <label>Horse riding</label>
            </value>
            <value>
                <fullName>Jazz music</fullName>
                <isActive>false</isActive>
                <label>Jazz music</label>
            </value>
            <value>
                <fullName>Popular music</fullName>
                <isActive>false</isActive>
                <label>Popular music</label>
            </value>
            <value>
                <fullName>Travel</fullName>
                <isActive>false</isActive>
                <label>Travel</label>
            </value>
            <value>
                <fullName>Wine and food</fullName>
                <isActive>false</isActive>
                <label>Wine and food</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>