force-app/main/default/objects/Contact/fields/Lettering_Name__c.field-meta.xml
<CustomField>
    <fullName>Lettering_Name__c</fullName>
    <description>Field for Data Migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lettering Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>