force-app/main/default/objects/Contact/fields/Lifetime_Status_f__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Status_f__c</fullName>
    <formula>IF (CONTAINS( UPPER( TEXT(Profile_Membership_Lifetime_Tier__c)) , &quot;SILVER&quot;), IMAGE(&quot;/resource/ContactImages/Silver.PNG&quot;, &quot;g&quot;, 30, 80),
IF (CONTAINS( UPPER( TEXT(Profile_Membership_Lifetime_Tier__c)) , &quot;GOLD&quot;), IMAGE(&quot;/resource/ContactImages/Gold.PNG&quot;, &quot;g&quot;, 30, 70),
IF (CONTAINS( UPPER( TEXT(Profile_Membership_Lifetime_Tier__c)) , &quot;PLATINUM&quot;), IMAGE(&quot;/resource/ContactImages/Platinum.PNG&quot;, &quot;g&quot;, 30, 100),
IF (CONTAINS( UPPER( TEXT(Profile_Membership_Lifetime_Tier__c)) , &quot;BRONZE&quot;), IMAGE(&quot;/resource/ContactImages/Bronze.PNG&quot;, &quot;g&quot;, 30, 80),
IF (CONTAINS( UPPER( TEXT(Profile_Membership_Lifetime_Tier__c)) , &quot;PLATINUM ONE&quot;), IMAGE(&quot;/resource/ContactImages/Platinum1.PNG&quot;, &quot;g&quot;, 30, 130),&quot;&quot;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime Status</label>
    <type>Text</type>
</CustomField>