force-app/main/default/objects/Contact/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <description>Freight - To allow users to store the LinkedIn URL of the Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Link to the contact&apos;s LinkedIn profile</inlineHelpText>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>