force-app/main/default/objects/Contact/fields/Loyalty_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Key_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[QLSF-335] Loyalty: Created to know if this Contact is Loyalty Key Contact.</description>
    <label>Loyalty Key Contact</label>
    <type>Checkbox</type>
</CustomField>