force-app/main/default/objects/Contact/fields/Market_Research__c.field-meta.xml
<CustomField>
    <fullName>Market_Research__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Market Research</label>
    <type>Checkbox</type>
</CustomField>