force-app/main/default/objects/Contact/fields/MktPref_1__c.field-meta.xml
<CustomField>
    <fullName>MktPref_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To store the incoming information from Acquire</description>
    <label>MktPref 1</label>
    <type>Checkbox</type>
</CustomField>