force-app/main/default/objects/Contact/fields/No_of_Bookings_past_12_months__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bookings_past_12_months__c</fullName>
    <description>QCC: Created to show/store # of Bookings (past 12 months)</description>
    <inlineHelpText>This field is set using an automation process</inlineHelpText>
    <label>Number of Bookings (past 12 months)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>